(lang dune 3.8)

(using melange 0.1)

(name melange-opam-template)

(license "MIT")

(maintainers Justyn Hunter)

(authors Justyn Hunter)

(homepage https://github.com/your/project)

(bug_reports https://github.com/your/project/issues)

(package
 (allow_empty)
 (name melange-opam-template)
 (synopsis "Photosite in Reason/Ocaml")
 (description "Photography Website"))
